--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           >
           <ul class="nav-list">
             <li class="nav-item">
-              <a class="nav-link" href="./index.html">Studio</a>
+              <a class="nav-link current" href="./index.html">Studio</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
             <li class="nav-item"><a class="nav-link" href="">Contacts</a></li>
@@ -65,6 +65,11 @@
           <h2 class="visually-hidden">Our advantages</h2>
           <ul class="advantages-list">
             <li class="adventures-item">
+              <div class="adventure-image">
+                <svg class="adventure-image-item" width="64" height="64">
+                  <use href="./images/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="adventure-subtittle">Strategy</h3>
               <p class="adventures-item-text" id="text">
                 Our goal is to identify the business problem to walk away with
@@ -72,6 +77,11 @@
               </p>
             </li>
             <li class="adventures-item">
+              <div class="adventure-image">
+                <svg class="adventure-image-item" width="64" height="64">
+                  <use href="./images/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="adventure-subtittle">Punctuality</h3>
               <p class="adventures-item-text" id="text-two">
                 Bring the key message to the brand's audience for the best price
@@ -79,6 +89,11 @@
               </p>
             </li>
             <li class="adventures-item">
+              <div class="adventure-image">
+                <svg class="adventure-image-item" width="64" height="64">
+                  <use href="./images/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="adventure-subtittle">Diligence</h3>
               <p class="adventures-item-text" id="text-tree">
                 Research and confirm brands that present the strongest digital
@@ -86,6 +101,11 @@
               </p>
             </li>
             <li class="adventures-item">
+              <div class="adventure-image">
+                <svg class="adventure-image-item" width="64" height="64">
+                  <use href="./images/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="adventure-subtittle">Technologies</h3>
               <p class="adventures-item-text" id="text-four">
                 Design practice focused on digital experiences. We bring forth a
@@ -111,8 +131,39 @@
               <div class="name-speciality">
                 <h3 class="team-subtittle">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="social-networks">
+                  <li class="social-networks-list">
+                    <a class="soc-link-icons" href="#">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-networks-list">
+                    <a class="soc-link-icons" href="#">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-networks-list">
+                    <a class="soc-link-icons" href="#">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-networks-list">
+                    <a class="soc-link-icons" href="#">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
+
             <li class="team-item">
               <img
                 class="team-image"
@@ -124,8 +175,39 @@
               <div class="name-speciality">
                 <h3 class="team-subtittle">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                <ul class="social-networks">
+                  <li class="social-networks-list">
+                    <a class="soc-link-icons" href="#">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-networks-list">
+                    <a class="soc-link-icons" href="#">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-networks-list">
+                    <a class="soc-link-icons" href="#">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-networks-list">
+                    <a class="soc-link-icons" href="#">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
+
             <li class="team-item">
               <img
                 class="team-image"
@@ -137,8 +219,39 @@
               <div class="name-speciality">
                 <h3 class="team-subtittle">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                <ul class="social-networks">
+                  <li class="social-networks-list">
+                    <a class="soc-link-icons" href="#">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-networks-list">
+                    <a class="soc-link-icons" href="#">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-networks-list">
+                    <a class="soc-link-icons" href="#">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-networks-list">
+                    <a class="soc-link-icons" href="#">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
+
             <li class="team-item">
               <img
                 class="team-image"
@@ -150,6 +263,36 @@
               <div class="name-speciality">
                 <h3 class="team-subtittle">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="social-networks">
+                  <li class="social-networks-list">
+                    <a class="soc-link-icons" href="#">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-networks-list">
+                    <a class="soc-link-icons" href="#">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-networks-list">
+                    <a class="soc-link-icons" href="#">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="social-networks-list">
+                    <a class="soc-link-icons" href="#">
+                      <svg class="soc-icon" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -173,14 +316,21 @@
                 <p class="portfolio-text">App</p>
               </div>
             </li>
-            <li class="portfolio-item">
-              <img
-                class="portfolio-image"
-                src="./images/cashless.jpg"
-                width="360"
-                height="300"
-                alt="phone-qr-code image"
-              />
+            <li class="portfolio-item cashless">
+              <div class="portfolio-cover-wrap">
+                <img
+                  class="portfolio-image"
+                  src="./images/cashless.jpg"
+                  width="360"
+                  height="300"
+                  alt="phone-qr-code image"
+                />
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="app-name-kind">
                 <h3 class="portfolio-subtittles">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -251,6 +401,39 @@
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
+      </div>
+      <div class="footer-container-two">
+        <p class="social-media-footer-text">Social media</p>
+        <ul class="social-networks-footer">
+          <li class="social-networks-list">
+            <a class="soc-link-icons" href="#">
+              <svg class="soc-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-networks-list">
+            <a class="soc-link-icons" href="#">
+              <svg class="soc-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-twitter"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-networks-list">
+            <a class="soc-link-icons" href="#">
+              <svg class="soc-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-facebook"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-networks-list">
+            <a class="soc-link-icons" href="#">
+              <svg class="soc-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-linkedin"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
