--- a/index.html
+++ b/index.html
@@ -304,13 +304,20 @@
           <h2 class="portfolio-tittle">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                class="portfolio-image"
-                src="./images/banking-app.jpg"
-                width="360"
-                height="300"
-                alt="banking app image"
-              />
+              <div class="portfolio-cover-wrap">
+                <img
+                  class="portfolio-image"
+                  src="./images/banking-app.jpg"
+                  width="360"
+                  height="300"
+                  alt="banking app image"
+                />
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="app-name-kind">
                 <h3 class="portfolio-subtittles">Banking App</h3>
                 <p class="portfolio-text">App</p>
@@ -337,52 +344,80 @@
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-image"
-                src="./images/meditation-app.jpg"
-                width="360"
-                height="300"
-                alt="meditation app image"
-              />
+              <div class="portfolio-cover-wrap">
+                <img
+                  class="portfolio-image"
+                  src="./images/meditation-app.jpg"
+                  width="360"
+                  height="300"
+                  alt="meditation app image"
+                />
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="app-name-kind">
                 <h3 class="portfolio-subtittles">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-image"
-                src="./images/taxi-service.jpg"
-                width="360"
-                height="300"
-                alt="taxi service image"
-              />
+              <div class="portfolio-cover-wrap">
+                <img
+                  class="portfolio-image"
+                  src="./images/taxi-service.jpg"
+                  width="360"
+                  height="300"
+                  alt="taxi service image"
+                />
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="app-name-kind">
                 <h3 class="portfolio-subtittles">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-image"
-                src="./images/screen.jpg"
-                width="360"
-                height="300"
-                alt="screen illustratins image"
-              />
+              <div class="portfolio-cover-wrap">
+                <img
+                  class="portfolio-image"
+                  src="./images/screen.jpg"
+                  width="360"
+                  height="300"
+                  alt="screen illustratins image"
+                />
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="app-name-kind">
                 <h3 class="portfolio-subtittles">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="portfolio-image"
-                src="./images/online-courses.jpg"
-                width="360"
-                height="300"
-                alt="online courses image"
-              />
+              <div class="portfolio-cover-wrap">
+                <img
+                  class="portfolio-image"
+                  src="./images/online-courses.jpg"
+                  width="360"
+                  height="300"
+                  alt="online courses image"
+                />
+                <p class="portfolio-cover-text">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </p>
+              </div>
               <div class="app-name-kind">
                 <h3 class="portfolio-subtittles">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
