--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
                 <p class="portfolio-text">App</p>
               </div>
             </li>
-            <li class="portfolio-item cashless">
+            <li class="portfolio-item">
               <div class="portfolio-cover-wrap">
                 <img
                   class="portfolio-image"
@@ -428,47 +428,49 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="container">
-        <a class="logo footer-logo" href="./index.html"
-          >Web<span class="logo-part">Studio</span></a
-        >
-        <p class="footer-text">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </div>
-      <div class="footer-container-two">
-        <p class="social-media-footer-text">Social media</p>
-        <ul class="social-networks-footer">
-          <li class="social-networks-list">
-            <a class="soc-link-icons" href="#">
-              <svg class="soc-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-networks-list">
-            <a class="soc-link-icons" href="#">
-              <svg class="soc-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-networks-list">
-            <a class="soc-link-icons" href="#">
-              <svg class="soc-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="social-networks-list">
-            <a class="soc-link-icons" href="#">
-              <svg class="soc-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
+      <div class="main-container-footer">
+        <div class="footer-container-one">
+          <a class="logo footer-logo" href="./index.html"
+            >Web<span class="logo-part">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer-container-two">
+          <p class="social-media-footer-text">Social media</p>
+          <ul class="social-networks-footer">
+            <li class="social-networks-list">
+              <a class="soc-link-icons" href="#">
+                <svg class="soc-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-networks-list">
+              <a class="soc-link-icons" href="#">
+                <svg class="soc-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-networks-list">
+              <a class="soc-link-icons" href="#">
+                <svg class="soc-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-networks-list">
+              <a class="soc-link-icons" href="#">
+                <svg class="soc-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
