--- a/index.html
+++ b/index.html
@@ -442,29 +442,29 @@
           <p class="social-media-footer-text">Social media</p>
           <ul class="social-networks-footer">
             <li class="social-networks-list">
-              <a class="soc-link-icons" href="#">
-                <svg class="soc-icon" width="24" height="24">
+              <a class="soc-link-icons-footer" href="#">
+                <svg class="soc-icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="social-networks-list">
-              <a class="soc-link-icons" href="#">
-                <svg class="soc-icon" width="24" height="24">
+              <a class="soc-link-icons-footer" href="#">
+                <svg class="soc-icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-networks-list">
-              <a class="soc-link-icons" href="#">
-                <svg class="soc-icon" width="24" height="24">
+              <a class="soc-link-icons-footer" href="#">
+                <svg class="soc-icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="social-networks-list">
-              <a class="soc-link-icons" href="#">
-                <svg class="soc-icon" width="24" height="24">
+              <a class="soc-link-icons-footer" href="#">
+                <svg class="soc-icon-footer" width="24" height="24">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
